Remove bgcolor attribute from body.

--- a/htdocs/alias.html
+++ b/htdocs/alias.html
@@ -2,7 +2,7 @@
 <head>
 <title>Alias Analysis</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Alias Analysis</h1>
 
 <p>June 29, 1998
