--- a/htdocs/assignment-instructions.html
+++ b/htdocs/assignment-instructions.html
@@ -2,7 +2,7 @@
 <head>
 <title>Instructions for FSF copyright assignment paper</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1>Instructions for copyright assignment paper</h1>
 
 <p>The way to assign copyright to the Foundation is to sign an
