--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -2,7 +2,7 @@
 <head>
 <title> Contributing Code</title>
 </head>
-<body bgcolor="white">
+<body>
 
 
 <h2><a name="contributing-code">CONTRIBUTING CODE</a></h2>
