--- a/htdocs/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1-test.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs-1.1 test strategy</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs-1.1 test strategy</h1>
 
 <p> This is very preliminary.  Expect it to change and be refined as the
