--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs Frequently Asked Questions</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs Frequently Asked Questions</h1>
 
 <ol>
