--- a/htdocs/gcse.html
+++ b/htdocs/gcse.html
@@ -2,7 +2,7 @@
 <head>
 <title>Global CSE/Partial Redundancy Elimination</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Global CSE/Partial Redundancy Elimination</h1>
 
 <p>May 18, 1998
