--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -2,7 +2,7 @@
 <head>
 <title>Building egcs </title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Building egcs</h1>
 
 <p>Now that egcs is configured, you are ready to build the compiler and
