--- a/htdocs/install/configure.html
+++ b/htdocs/install/configure.html
@@ -2,7 +2,7 @@
 <head>
 <title>Configuring egcs</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Configuring egcs</h1>
 
 <p>Like most GNU software, egcs must be configured before it can be built.
