--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -2,7 +2,7 @@
 <head>
 <title>Host/Target specific installation notes for egcs</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Host/Target specific installation notes for egcs</h1>
 
 <p><b>alpha*-*-*</b><br>
