--- a/htdocs/install/test.html
+++ b/htdocs/install/test.html
@@ -2,7 +2,7 @@
 <head>
 <title>Testing egcs</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Testing egcs</h1>
 
 <p>Before you install egcs, you might wish to run the egcs testsuite; this
