--- a/htdocs/buildstat.html
+++ b/htdocs/buildstat.html
@@ -2,7 +2,7 @@
 <head>
 <title> Build and Test status for egcs-1.0</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Build and Test status for egcs-1.0</h1>
 
 <p>Regression testing is relative to gcc-2.7.*; only regressions relative
