--- a/htdocs/c++features.html
+++ b/htdocs/c++features.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs-1.0 C++ Features</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs-1.0 C++ Features</h1>
 
 
