--- a/htdocs/egcs-1.0.1.html
+++ b/htdocs/egcs-1.0.1.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs-1.0.1</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs-1.0.1</h1>
 
 <p>January 6, 1998
