--- a/htdocs/features-2.8.html
+++ b/htdocs/features-2.8.html
@@ -2,7 +2,7 @@
 <head>
 <title> gcc-2.8 features in egs-1.0 </title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">gcc-2.8 features in egcs-1.0</h1>
 
 <pre>
