--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs project home page</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs project home page</h1>
 
 Welcome to the egcs project!
