--- a/htdocs/install/finalinstall.html
+++ b/htdocs/install/finalinstall.html
@@ -2,7 +2,7 @@
 <head>
 <title>Final install egcs</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">Final install egcs</h1>
 
 <p>Now that egcs has been built and tested, you can install it with
