--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs project mailing lists</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs project mailing lists</h1>
 
 
