--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -2,7 +2,7 @@
 <head>
 <title>egcs ftp mirror sites</title>
 </head>
-<body bgcolor="white">
+<body>
 <h1 align="center">egcs mirror sites</h1>
 
 <h2><a name="mirrors">MIRROR LISTS</a></h2>
