--- a/htdocs/alias.html
+++ b/htdocs/alias.html
@@ -10,7 +10,7 @@
 <p>We are pleased to announce that <A
 HREF="http://www.markmitchell.com">Mark Mitchell Consulting</A>, as
 part of a continuing contract with the Accelerated Strategic Computing
-Initative (ASCI) program at Los Alamos National Laboratory, has
+Initiative (ASCI) program at Los Alamos National Laboratory, has
 contributed a framework to improve alias analysis in the compiler.  It
 is currently used to propagate alias information provided by the
 language front ends into the optimization passes of the compiler.
