Tweaks from Gerald.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -11,19 +11,26 @@ to users and developers.  All the lists are under majordomo control
 with an open subscription and post policy.
 
 <ul>
-  <li><b>egcs-announce</b> is a read-only low volume list where
+  <li><b><a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a></b>
+  is a read-only low volume list where
   we post announcements about releases or other important events.
-  <li><b>egcs</b> is a high volume list for general discussions about egcs.
-  Anything not covered by other mailing lists is suitable for discussion
-  on <b>egcs</b>.
-  <li><b>egcs-bugs</b> is a relatively high volume list for bug reports and
-  general discussion about bugs in egcs.
-  <li><b>egcs-patches</b> is a relatively high volume list for patch
-  submissions and discussion of particular patches.  All patch submissions
-  and all discussion for a particular patch should be sent to
-  <b>egcs-patches</b>
-  <li><b>egcs-cvs</b> is a read-only, relatively high volume list which tracks
-  checkins to the egcs CVS repository.
+
+  <li><b><a href="http://www.cygnus.com/ml/egcs/">egcs</a></b>
+  is a high volume list for general discussions about egcs.  Anything not
+  covered by other mailing lists is suitable for discussion on <b>egcs</b>.
+
+  <li><b><a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a></b>
+  is a relatively high volume list for bug reports and general discussion
+  about bugs in egcs.
+
+  <li><b><a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a></b>
+  is a relatively high volume list for patch submissions and discussion of
+  particular patches.  All patch submissions and all discussion for a
+  particular patch should be sent to <b>egcs-patches</b>.
+
+  <li><b><a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a></b>
+  is a read-only, relatively high volume list which tracks checkins to the
+  egcs CVS repository.
 </ul>
   
 <p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
@@ -73,7 +80,7 @@ future.
 
 <hr>
 <a name="glimpsebox"></a>
-<p><i>Last modified:  July  6, 1998</i>
+<p><i>Last modified:  July 17, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
