Update from Gerald

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -28,8 +28,9 @@ tell you what you're running) require TLS597 from ftp.sco.com/TLS for
 C++ constructors and destructors to work right.
 
 <p><b>i?86-pc-solaris*</b><br>
-You'll need a patch to fix an egcs bug on this platform.
-<a href="http://www-egcs.cygnus.com/faq.html#x86solaris"> x86 solaris patch</a>
+For versions of egcs before 1.0.1 you'll need a special
+<a href="http://egcs.cygnus.com/faq.html#x86solaris">x86 solaris patch</a>
+to fix an egcs bug on this platform.
 
 <p><b>hppa*-hp-hpux*</b><br>
 We <b>highly</b> recommend using gas/binutils-2.8 on all hppa platforms; you
@@ -123,7 +124,7 @@ exception handling
 <p>XXX Linux stuff
 -k encaps stuff
 <hr>
-<i>Last modified on May 15, 1998.</i>
+<i>Last modified on July 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
