--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,6 +40,9 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>July 15, 1998</b></dt>
+<dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
+You can read some more <a href="redirect.html">here</a>.</dd>
 <dt><b>June 29, 1998</b></dt>
 <dd>
   <a href="alias.html"> <b>Mark Mitchell donates alias analysis framework</b></a>.
