--- a/htdocs/egcs-1.1-branch.html
+++ b/htdocs/egcs-1.1-branch.html
@@ -26,8 +26,12 @@ option #2 or #3 is recommended.
 released, snapshots will return to tracking the mainline sources.
 
 <hr>
-<p>All patches for the egcs-1.1 release branch must be approved.  We are
-only accepting bugfix patches for the egcs-1.1 release.
+<p>All patches for the egcs-1.1 release branch must be approved by either
+someone with global write privs or that maintains the specific file being
+patched.   At some point in the near future, all patches will need to go through
+the release coordinator.  A message will be sent to the egcs list at that time.
+
+<p>We are only accepting bugfix patches for the egcs-1.1 release.
 
 <p>You can still submit patches for the mainline egcs sources.  However,
 responses to such patches may be delayed.
