--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -32,6 +32,7 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Australia/NZ (release only): <a href="ftp://moshpit.cygnus.com/pub/egcs/">moshpit.cygnus.com</a>
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
+<LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
