More information on testing plan.

--- a/htdocs/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1-test.html
@@ -9,10 +9,9 @@
 steering committee settles on a test strategy for egcs-1.1.
 
 <ul>
-  <li> No testsuite regressions on major platforms (to be defined) relative
-       to egcs-1.0.3a or gcc-2.8.1 (both would be preferable).
+  <li> <a href="regress.html"> No testsuite regressions on major platforms</a>.
 
-  <li> libg++ add on builds and passes on same platforms as we do testsuite
+  <li> libg++ addon builds and passes on same platforms as we do testsuite
        regressions on.
 
   <li> Builds glibc and passes glibc testsuite on major supported platforms
@@ -39,7 +38,7 @@ steering committee settles on a test strategy for egcs-1.1.
 </ul>
 
 <hr>
-<i>Last modified on July 7, 1998.</i>
+<i>Last modified on July 17, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
