--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -61,25 +61,22 @@ and suggestions for these last few test targets would be appreciated.
 <p>  Second, you need an appropriate site.exp.  Here is a template:
 
 <pre>
-  set rootme "."
-  set srcdir "/foo/egcs/gcc"
-  set target_triplet hppa1.1-hp-hpux10.20
-  set tmpdir /tmp
-  set srcdir "${srcdir}/testsuite"
-  set GCC_UNDER_TEST /foo/bar/com/gcc
-  set GXX_UNDER_TEST /foo/bar/com/g++
+# snapdir should point to the top-level directory of an unpacked egcs-1.1
+# snapshot
+set snapdir "/some/place/egcs-19980715"
+
+# set old_release_prefix to the prefix directory of an installed egcs-1.0.3a.
+set old_release_prefix /prefix/for/egcs-1.0.3a
+
+set rootme "."
+set target_triplet [exec "$snapdir/config.guess"]
+set srcdir "$snapdir/gcc/testsuite"
+set GCC_UNDER_TEST "$old_release_prefix/bin/gcc"
+set GXX_UNDER_TEST "$old_release_prefix/bin/g++"
 </pre>
 
-
-<p>  Obviously you have to change "srcdir" to the directory where your
-  egcs/gcc sources are located.
-
-<p>  You should set target_triplet to the canonical name of your system.
-  Running "config.guess" from the toplevel egcs source directory  will
-  tell you the canonical name of your system.
-
-<p>  Set GCC_UNDER_TEST and CXX_UNDER_TEST to the fully qualified pathname
-  to a gcc-2.7.2.* version of gcc & g++.
+<p>Obviously you have to change "snapdir" and "old_release_prefix" to
+appropriate values.
 
 <p>Then run the tests with the following commands:
 
@@ -94,9 +91,12 @@ and suggestions for these last few test targets would be appreciated.
 those files to the testing coordinator <a href="mailto:law@cygnus.com">
 law@cygnus.com</a>.
 
+<p>Note that you will receive many failures from gcc-2.8.1 and egcs-1.0.3a when
+running the gcc testsuites because those versions of the compiler do not
+support -Os.
 <hr>
 
-<i>Last modified on July 17, 1998.</i>
+<i>Last modified on July 19, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
