Update from Gerald.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -556,6 +556,7 @@ touch `find egcs/texinfo -name \*.gmo -print`
 touch egcs/gcc/{c-parse.y,cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
 touch egcs/gcc/cp/{parse.c,parse.h}
 touch egcs/gcc/objc/objc-parse.{c,y}
+touch egcs/libf2c/libU77/stamp-h.in
 </pre>
 
 <hr>
@@ -671,7 +672,7 @@ if you have RH 5.0.
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 5, 1998</i>
+<p><i>Last modified:  July 20, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
