--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -33,6 +33,7 @@ if you are mirroring the egcs pages so we can note it here!
 <LI>Athens, Greece: <a href="ftp://ftp.ntua.gr/pub/gnu//egcs/">ftp.ntua.gr</a>,
 thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <LI>Nijmegen, Netherlands: <A HREF="ftp://ftp.nluug.nl/pub/languages/egcs">ftp.nluug.nl</a>, thanks to <a href="mailto:jc@ATComputing.nl">Jan Cristiaan van Winkel</a>!
+<LI>Tokyo, Japan: <A HREF="ftp://ftp.dti.ad.jp/pub/lang/egcs">ftp.dti.ad.jp</a>, thanks to <a href="mailto:ftp-admin@dti.ad.jp">IWAIZAKO Takahiro</a>!
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
