--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -35,6 +35,7 @@ results for these platforms now.
 <li>mips-sgi-irix5.?
 <li>mips-sgi-irix6.2
 <li>{powerpc,rs6000}-ibm-aix4.1
+<li>{powerpc,rs6000}-ibm-aix4.3
 <li>sparc-sun-solaris2.5
 <li>sparc-sun-solaris2.6
 <li>sparc-sun-sunos4.1.4
