Add g77_under_test definition to template

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -74,6 +74,7 @@ set target_triplet [exec "$snapdir/config.guess"]
 set srcdir "$snapdir/gcc/testsuite"
 set GCC_UNDER_TEST "$old_release_prefix/bin/gcc"
 set GXX_UNDER_TEST "$old_release_prefix/bin/g++"
+set G77_UNDER_TEST "$old_release_prefix/bin/g77"
 </pre>
 
 <p>Obviously you have to change "snapdir" and "old_release_prefix" to
