Fix cut and paste lossage

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -556,9 +556,9 @@ touch `find egcs/texinfo -name \*.gmo -print`
 touch egcs/gcc/{c-parse.y,cstamp-h.in,c-gperf.h,c-parse.c,c-parse.h,cexp.c}
 touch egcs/gcc/cp/{parse.c,parse.h}
 touch egcs/gcc/objc/objc-parse.{c,y}
-touch egcs-$date/libf2c/g2c.h
-touch egcs-$date/libf2c/libU77/config.hin
-touch egcs-$date/libf2c/libU77/stamp-h.in
+touch egcs/libf2c/g2c.h
+touch egcs/libf2c/libU77/config.hin
+touch egcs/libf2c/libU77/stamp-h.in
 </pre>
 
 <hr>
