i 	* egcs-1.1.html: Fix small typo.

--- a/htdocs/egcs-1.1.html
+++ b/htdocs/egcs-1.1.html
@@ -46,7 +46,7 @@ egcs-1.1 branch</a>.
   
   <p> Wide scale, focused testing should start on or before July 11th.
 
-  <p> <li> <b>July 31, 1998. Critial Bug Freeze Date</b>.
+  <p> <li> <b>July 31, 1998. Critical Bug Freeze Date</b>.
   <p>July 31, 1998 is the target date for freezing the sources.  After this
   date only critical bugfixes will be accepted for inclusion in egcs-1.1.
   This may be overly optimistic, but it's important to have a goal to shoot
@@ -69,7 +69,7 @@ the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
 <hr>
-<i>Last modified on July 14, 1998.</i>
+<i>Last modified on July 30, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
