Fix various typpos and speling.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -46,7 +46,7 @@
 </ol>
 
 <hr>
-<h2><a name="gcc-2-diff">How is egcs be different from gcc2?</a></h2>
+<h2><a name="gcc-2-diff">How is egcs different from gcc2?</a></h2>
 
 <p>Six years ago, gcc version 1 had reached a point of stability.  For the
 targets it could support, it worked well.  It had limitations inherent in
@@ -59,7 +59,7 @@ we want to make with egcs.
 <p>In brief, the three biggest differences between egcs and gcc2 are:  
 
 <ul>
-  <li>More rexamination of basic architectual decisions of
+  <li>More reexamination of basic architectural decisions of
     gcc and an interest in adding new optimizations;
 
   <li>working with the groups who have fractured out from gcc2 (like
@@ -109,7 +109,7 @@ in the world.
 strong central maintainers who will reject patches, who will demand
 documentation of implementations, and who will keep the level of
 quality as high as it is today.  Code that could use wider testing may
-be intergrated--code that is simply ill-conceived won't be.
+be integrated--code that is simply ill-conceived won't be.
 
 <p>egcs is not the first piece of software to use this open development
 process; FreeBSD, the Emacs lisp repository, and Linux are a few
@@ -199,7 +199,7 @@ glibc2.0.5c.
 <hr>
 <h2><a name="morelibc">`_IO_stdfile_0_lock' was not declared in this scope</a></h2>
 <p>If you get this error, it means either egcs incorrectly guessed what version
-of libc is installed on your linux system, or you incorrectly specified a
+of libc is installed on your Linux system, or you incorrectly specified a
 version of glibc when configuring egcs.
 
 <p>If you did not provide a target name when configuring egcs, then you've
@@ -217,7 +217,7 @@ the install instructions carefully.
 if you are building a cross compiler.
 
 <p>It has also been reported that the Fortran compiler can not be built     
-on Red Hat 4.X linux for the Alpha.  Fixing this may require upgrading
+on Red Hat 4.X Linux for the Alpha.  Fixing this may require upgrading
 binutils or to Red Hat 5.0; we'll provide more information as it becomes  
 available.                                                               
 
@@ -265,7 +265,7 @@ and may not work (or even build).  Use it at your own risk.
 <p>If you bootstrap the compiler on hpux10 using the HP assembler instead of
 gas, every file will fail the comparison test.
 
-<p>The HP asembler inserts timestamps into object files it creates, causing
+<p>The HP assembler inserts timestamps into object files it creates, causing
 every file to be different.  The location of the timestamp varies for each
 object file, so there's no real way to work around this mis-feature.
 
@@ -295,7 +295,7 @@ itself with failures in the libio/libstdc++ tests after configuring with
 <p>GCC does not specify a runpath so that the dynamic linker can find dynamic
 libraries at runtime.
 
-<p>The short explaination is that if you always pass a -R option to the
+<p>The short explanation is that if you always pass a -R option to the
 linker, then your programs become dependent on directories which
 may be NFS mounted, and programs may hang unnecessarily when an
 NFS server goes down.
@@ -326,7 +326,7 @@ libraries, target include files, etc).
 crossgcc FAQ</a> for information about building cross compilers.
 
 <p> If you have all the pieces available, then `make cross' should build a
-cross compiler.  `make LANGUAGES="c c++" install'will install the cross
+cross compiler.  `make LANGUAGES="c c++" install' will install the cross
 compiler.
 
 <p> Note that if you're trying to build a cross compiler in a tree which
@@ -414,7 +414,7 @@ will need to specify -Wno-return-type to turn it off.
 <hr>
 <h2> <a name="gas">GCC can not find GAS</a></h2>
 <p>Some configurations like irix4, irix5, hpux* require the use of the GNU
-assembler intead of the system assembler.  To ensure that egcs finds the GNU
+assembler instead of the system assembler.  To ensure that egcs finds the GNU
 assembler, you should configure the GNU assembler with the same --prefix
 option as you used for egcs.  Then build & install the GNU assembler.  After
 the GNU assembler has been installed, proceed with building egcs.
@@ -564,9 +564,9 @@ touch egcs/libf2c/libU77/stamp-h.in
 <h2> <a name="aix">EGCS does not work on AIX 4.3</a></h2>
 <p>EGCS does not currently support AIX4.3; however, if you want to try
 and make it work with AIX 4.3 we highly recommend you get the
-fix for APAR IX74254 (64BIT DISASSEMBLED OUPUT FROM COMPILER FAILS TO
+fix for APAR IX74254 (64BIT DISASSEMBLED OUTPUT FROM COMPILER FAILS TO
 ASSEMBLE/BIND) which is available from IBM Customer Support and IBM's
-service.boulder.ibm.com website.
+service.boulder.ibm.com web site.
 
 <hr>
 <h2><a name="gdb">Problems debugging egcs code</a></h2>
