Updated information on how to convert an existing tree for write access.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -32,6 +32,9 @@ and send you mail notifying you that the account is ready.  At this point you
 should be able to "slogin egcs.cygnus.com".  We recommend doing this once to
 verify that ssh is up and functioning correctly.
 
+
+<h2>Setting up your local CVS tree</h2>
+
 <p>Once you can login to the machine, it's trivial to start using ssh from
 your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
@@ -46,9 +49,12 @@ in the normal fashion, including committing changes.
 <p>It is also possible to convert an existing CVS tree to use ssh by replacing
 all the "Root" files in the local tree with the following contents:
 
-<pre>
-egcs.cygnus.com:/egcs/carton/cvsfiles
-</pre>
+<blockquote><code>
+username@egcs.cygnus.com:/egcs/carton/cvsfiles
+</code></blockquote>
+
+where <code>username</code> is your user name at egcs.cygnus.com.
+
 
 <p>To avoid the nuisance of having to supply your passphrase for each
 operation, you may want to use <code>ssh-agent</code>(1) followed by
@@ -79,7 +85,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on July 13, 1998.</i>
+<i>Last modified on August 06, 1998.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
