Use <blockquote><code> instead of <pre>.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -38,9 +38,10 @@ verify that ssh is up and functioning correctly.
 <p>Once you can login to the machine, it's trivial to start using ssh from
 your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
-<pre>
+
+<blockquote><code>
 cvs -z 9 -d egcs.cygnus.com:/egcs/carton/cvsfiles co egcs
-</pre>
+</code></blockquote>
 
 This will check out a new CVS tree that you should be able to work with
 in the normal fashion, including committing changes.
@@ -65,10 +66,10 @@ it as a demon and set the values of the environment variables
 in each relevant process to what <code>ssh-agent</code> prints when it
 starts.  To avoid messages about (lack of) X11 forwarding, put in your
 <samp>~/.ssh/config</samp> and entry like:
-<pre>
-Host egcs.cygnus.com
+<blockquote><code>
+Host egcs.cygnus.com<br>
 ForwardX11 no
-</pre>
+</code></blockquote>
 
 <p>Enjoy!
 
@@ -76,9 +77,9 @@ ForwardX11 no
 
 <p>Late breaking news: the web pages and CGI scripts are now also
 editable remotely.  Check out wwwdocs instead of egcs (e.g. type
-<pre>
+<blockquote><code>
 cvs -z 9 -d egcs.cygnus.com:/egcs/carton/cvsfiles co wwwdocs
-</pre>
+</code></blockquote>
 on your workstation) and make whatever changes you deem necessary.
 Web pages go under htdocs/, cgi scripts under cgi-bin/.  When you check
 your changes back in they will automatically be checked out into the
