User name is required for fresh checkouts.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -40,9 +40,10 @@ your remote machine.  Set CVS_RSH in your environment to "ssh".  Then issue
 the command
 
 <blockquote><code>
-cvs -z 9 -d egcs.cygnus.com:/egcs/carton/cvsfiles co egcs
+cvs -z 9 -d username@egcs.cygnus.com:/egcs/carton/cvsfiles co egcs
 </code></blockquote>
 
+where <code>username</code> is your user name at egcs.cygnus.com.
 This will check out a new CVS tree that you should be able to work with
 in the normal fashion, including committing changes.
 
@@ -53,8 +54,6 @@ all the "Root" files in the local tree with the following contents:
 <blockquote><code>
 username@egcs.cygnus.com:/egcs/carton/cvsfiles
 </code></blockquote>
-
-where <code>username</code> is your user name at egcs.cygnus.com.
 
 
 <p>To avoid the nuisance of having to supply your passphrase for each
@@ -86,7 +85,7 @@ your changes back in they will automatically be checked out into the
 web server's data area.
 
 <hr>
-<i>Last modified on August 06, 1998.</i>
+<i>Last modified on August 07, 1998.</i>
 
 <hr>
 <a href="/">Return to the egcs home page</a>
