--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -43,6 +43,7 @@
   <li><a href="#picflag-needed">Why can't I build a shared library?</a>
   <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
   <li><a href="#axparch">Error: Unknown pseudo-op:  `.arch'</a>
+  <li><a href="#sig11">Signal 11 on Linux</a>
 </ol>
 
 <hr>
@@ -672,8 +673,16 @@ if you have RH 4.2, or
 if you have RH 5.0.
 
 <hr>
+<h2><a name="sig11">Signal 11 on Linux</a></h2>
+<p> If you receive Signal 11 errors when building on Linux, then it is possible
+you have a hardware problem.  Further information on this can be found on
+<a href="http://www.bitwizard.nl/sig11/">www.bitwizard.nl.</a>
+
+
+
+<hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  July 20, 1998</i>
+<p><i>Last modified:  August 8, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
