Add notes on SPAM.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -44,6 +44,7 @@
   <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
   <li><a href="#axparch">Error: Unknown pseudo-op:  `.arch'</a>
   <li><a href="#sig11">Signal 11 on Linux</a>
+  <li><a href="spam.html">Dealing with spam on the lists</a>
 </ol>
 
 <hr>
