Note new IBM linker patch.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -44,6 +44,7 @@
   <li><a href="#sunos4ld">Linker core dumps on SunOS4</a>
   <li><a href="#axparch">Error: Unknown pseudo-op:  `.arch'</a>
   <li><a href="#sig11">Signal 11 on Linux</a>
+  <li><a href="#bigtoc">Link failures using -bbigtoc on AIX</a>
   <li><a href="spam.html">Dealing with spam on the lists</a>
 </ol>
 
@@ -680,10 +681,14 @@ you have a hardware problem.  Further information on this can be found on
 <a href="http://www.bitwizard.nl/sig11/">www.bitwizard.nl.</a>
 
 
+<hr>
+<h2><a name="bigtoc">Link failures using -bbigtoc on AIX</a></h2>
+<p>This may be a bug in the AIX linker.  A linker patch is available on
+service.boulder.ibm.com (PTF U455193 for APAR IX75823)
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  August 8, 1998</i>
+<p><i>Last modified:  August 10, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
