--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -5,15 +5,12 @@
 <body>
 <h1 align="center">egcs-1.1 regression test strategy</h1>
 
-<p>We are still hammering out the final testing plan for egcs-1.1; however
-some of the work can be started before the final testing plan is finished.
+<p>We are still hammering out the final testing plan for egcs-1.1; however,
+regression testing is well under way.
 
 <p>One of the critical steps in making releases is regression testing.  For
 egcs-1.1 we want to perform regression tests against gcc-2.8.1 and 
 egcs-1.0.3a.
-
-<p>So, we are looking for volunteers to run the egcs testsuite using 
-gcc-2.8.1 and egcs-1.0.3a and eventually the egcs-1.1 snapshots.
 
 <p>Since it is impossible to test every platform, we have selected a list
 of popular platforms for which egcs-1.1 should have no regressions relative
@@ -23,36 +20,16 @@ to egcs-1.0.3a or gcc-2.8.1.
 list.  However, the "no regressions" policy does not necessarily apply
 to targets not on the official regression test list.
 
+<p>At this time we have gcc-2.8.1 and egcs-1.0.3a test results for most of
+the platforms on the official test matrix as well as for a few other platforms.
+We are missing alpha-dec-osf4 (Kaveh Ghazi), sparc-linux (David Miller) from
+the official matrix.  Hopefully we will have those results soon.
 
-<p>This list is not yet complete.  However, the targets currently on the
-list will not be removed from the list.  So we can start gathering test
-results for these platforms now.
-
-<ul>
-<li>alpha-dec-osf4
-<li>alpha-dec-linux (glibc2, presumably this implies Red Hat 5.0 or 5.1)
-<li>hppa1.1-hp-hpux10.20
-<li>mips-sgi-irix5.?
-<li>mips-sgi-irix6.2
-<li>{powerpc,rs6000}-ibm-aix4.1
-<li>{powerpc,rs6000}-ibm-aix4.3
-<li>sparc-sun-solaris2.5
-<li>sparc-sun-solaris2.6
-<li>sparc-sun-sunos4.1.4
-<li>sparc-sun-linux
-<li>x86-pc-linux-gnulibc1
-<li>x86-pc-linux-gnu  (glibc2)
-</ul>
+<p>We would like to have tests for freebsd-2.2.x, ppc-linux and x86-solaris
+as additional tests, but they are not on the official test matrix.
 
 <p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> directly if you
 want to help with the regression testing phase of the egcs-1.1 release cycle.
-
-<p>We would like to add one or two targets which use free operating systems 
-like FreeBSD, NetBSD, OpenBSD, etc.  We would also like to add a m68k
-native target (NeXT and/or NetBSD most likely) and a non-linux x86 target.
-We will probably another AIX target to the official list.  Your comments
-and suggestions for these last few test targets would be appreciated.
-
 
 <h2>How to run the regression tests</h2>
 
@@ -98,7 +75,355 @@ running the gcc testsuites because those versions of the compiler do not
 support -Os.
 <hr>
 
-<i>Last modified on July 19, 1998.</i>
+<h2>Current Regression Testing Status</h2>
+<p>
+<table>
+<table border="0">
+<tr>
+<th>
+Platform
+</th>
+<th>
+gcc-2.8.1
+</th>
+<th>
+egcs-1.0.3a
+</th>
+<th>
+egcs-1.1
+</th>
+<th>
+regressions
+</th>
+</tr>
+<tr>
+<td>
+alpha-dec-osf4
+</td>
+<td>
+Kaveh Ghazi
+</td>
+<td>
+Kaveh Ghazi
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+alphaev5-unknown-linux-gnu
+</td>
+<td>
+Craig Burley
+</td>
+<td>
+Craig Burley
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+g++.jason/{thunk1,thunk2}.C
+memcpy-1.c
+</td>
+</tr>
+<tr>
+<td>
+hppa1.1-hp-hpux10.20
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+g++.jason/{thunk1.C thunk2.C thunk3.C}
+g++.mike/thunk1.C
+</td>
+</tr>
+<tr>
+<td>
+i386-pc-freebsd2.1.6
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+eb130.C eb133.C
+</td>
+</tr>
+<tr>
+<td>
+i586-pc-linux-gnu
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Manfred Hollstein
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+i586-pc-linux-gnulibc1
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-linux-gnulibc1
+</td>
+<td>
+Craig Burley
+</td>
+<td>
+Craig Burley
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-linux-gnu
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+i686-pc-sco3.2v5.0.5
+</td>
+<td>
+Robert Lipe
+</td>
+<td>
+Robert Lipe
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+m68k-sun-sunos4.1
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+Kate Hedstrom
+</td>
+<td>
+950612-1.c
+eb131.C
+</td>
+</tr>
+<tr>
+<td>
+mips-sgi-irix5.2
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+spec1.C cvt7.C eh42.C p786.C alpha2.f
+</td>
+</tr>
+<tr>
+<td>
+mips-sgi-irix6.2
+</td>
+<td>
+David Billinghurst
+</td>
+<td>
+David Billinghurst
+</td>
+<td>
+David Billinghurst
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+mips-sgi-irix6.4
+</td>
+<td>
+Dave Love
+</td>
+<td>
+Dave Love
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+{rs6000,powerpc}-ibm-aix4.2
+</td>
+<td>
+David Edelsohn
+</td>
+<td>
+David Edelsohn
+</td>
+<td>
+Rodney Brown
+</td>
+<td>
+930513-2.c g++.jason/thunk2.C
+g++.mike/{eh30.C,p4750.C}
+g++.other/partspec1.C
+g++.robertl/eb106.C
+</td>
+</tr>
+<tr>
+<td>
+powerpc-ibm-linux-gnu
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-solaris2.5
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Joe Buck
+</td>
+<td>
+Manfred Hollstein
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-solaris2.6
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Manfred Hollstein
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-sunos4.1
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Alexandre Oliva
+</td>
+<td>
+Manfred Hollstein
+</td>
+<td>
+NONE
+</td>
+</tr>
+<tr>
+<td>
+sparc-sun-linux-gnu
+</td>
+<td>
+David Miller
+</td>
+<td>
+David Miller
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
+
+<p>*Note Everything is failing gcc.dg/980626-1.c.  It's a bogus warning
+test, so I don't consider it critical, but I have asked for a volunteer
+to look into the problem.
+
+<p>explicit69.C is failing on several platforms too.  A patch has been
+submitted for the problem, but I don't know if Jason has looked at the
+patch yet or if he's fixing the problem in a different way.
+
+<p><i>Last modified on August 14, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
