More notes on schedule and testing stuff

--- a/htdocs/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1-test.html
@@ -5,9 +5,6 @@
 <body>
 <h1 align="center">egcs-1.1 test strategy</h1>
 
-<p> This is very preliminary.  Expect it to change and be refined as the
-steering committee settles on a test strategy for egcs-1.1.
-
 <ul>
   <li> <a href="regress.html"> No testsuite regressions on major platforms</a>.
 
@@ -19,10 +16,12 @@ steering committee settles on a test strategy for egcs-1.1.
        any currently released version.  We will place a tag on the glibc
        sources to provide a common reference point for testing.
 
-  <li> Linux kernel builds and runs (2.0.34 and 2.1.??? TBD).  Platforms to
-       be determined.
+  <li> Linux kernel builds and runs (and 2.1.??? TBD).  Platforms will be
+       x86, alpha.  Sparc & PowerPC kernel tests would also be greatly
+       appreciated.
 
-  <li> Red Hat 5.1 builds without errors on x86, Alpha (and Sparc?, PPC?).
+  <li> Red Hat 5.1 builds without errors on x86, Alpha.  Again, Sparc and
+       PowerPC tests would be greatly appreciated.
 
   <li> RTEMS builds on the following RTEMS targets:
        <ul>
@@ -38,7 +37,7 @@ steering committee settles on a test strategy for egcs-1.1.
 </ul>
 
 <hr>
-<i>Last modified on July 17, 1998.</i>
+<i>Last modified on August 14, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
