--- a/htdocs/egcs-1.1.html
+++ b/htdocs/egcs-1.1.html
@@ -12,6 +12,11 @@
 for egcs-1.1, the testing/release criteria for egcs-1.1, new features
 to be found in egcs-1.1, etc.
 
+<p> August 14, 1998.  The egcs-1.1 sources are frozen.  Only critical patches
+are being accepted.  All checkins to the egcs-1.1 tree must be approved by
+the release manager (law@cygnus.com).  We are shooting for an end of the month
+release.
+
 <p> July 14, 1998.  We have created the <a href="egcs-1.1-branch.html">
 egcs-1.1 branch</a>. 
 
@@ -69,7 +74,7 @@ the actual schedule used for egcs-1.1 so that we can improve the process
 in the future.
 
 <hr>
-<i>Last modified on July 30, 1998.</i>
+<i>Last modified on August 14, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
