Remove some regressions from alpha-linux and note that i686-pc-linux-gnulibc1 has no testsuite regressions.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -125,7 +125,6 @@ Craig Burley
 Alexandre Oliva
 </td>
 <td>
-g++.jason/{thunk1,thunk2}.C
 memcpy-1.c
 </td>
 </tr>
@@ -208,8 +207,10 @@ Craig Burley
 Craig Burley
 </td>
 <td>
+Jeff Law
 </td>
 <td>
+NONE
 </td>
 </tr>
 <tr>
