Update from Gerald.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -35,6 +35,13 @@ instead.  This is identical to "make bootstrap" except that object files
 from the stage1 and stage2 of the 3-stage bootstrap of the compiler are
 deleted as soon as they are no longer needed.
 
+<p>If you want to save additional space during the bootstrap and in
+the final installation as well, you can build the compiler binaries
+without debugging information with "make CFLAGS='-O' LIBCFLAGS='-g
+-O2' LIBCXXFLAGS='-g -O2 -fno-implicit-templates' bootstrap".  This will save
+roughly 40% of disk space both for the bootstrap and the final installation.
+(Libraries will still contain debugging information.)
+
 <p><b>Building a cross compiler</b>
 
 <p> We recommend reading the
@@ -60,7 +67,7 @@ following steps:
 
 <p>
 <hr>
-<i>Last modified on June 19, 1998.</i>
+<i>Last modified on August 15, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
