0 Remove explicit69 regression note.  Update ppc/rs6000 regressions.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -329,7 +329,7 @@ David Edelsohn
 Rodney Brown
 </td>
 <td>
-930513-2.c g++.jason/thunk2.C
+g++.jason/thunk2.C
 g++.mike/{eh30.C,p4750.C}
 g++.other/partspec1.C
 g++.robertl/eb106.C
@@ -421,10 +421,6 @@ David Miller
 <p>*Note Everything is failing gcc.dg/980626-1.c.  It's a bogus warning
 test, so I don't consider it critical, but I have asked for a volunteer
 to look into the problem.
-
-<p>explicit69.C is failing on several platforms too.  A patch has been
-submitted for the problem, but I don't know if Jason has looked at the
-patch yet or if he's fixing the problem in a different way.
 
 <p><i>Last modified on August 14, 1998.</i>
 
