Add freebsd-2.2.6 testing.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -25,7 +25,7 @@ the platforms on the official test matrix as well as for a few other platforms.
 We are missing alpha-dec-osf4 (Kaveh Ghazi), sparc-linux (David Miller) from
 the official matrix.  Hopefully we will have those results soon.
 
-<p>We would like to have tests for freebsd-2.2.x, ppc-linux and x86-solaris
+<p>We would like to have tests for ppc-linux and x86-solaris
 as additional tests, but they are not on the official test matrix.
 
 <p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> directly if you
@@ -160,6 +160,23 @@ Kate Hedstrom
 </td>
 <td>
 eb130.C eb133.C
+</td>
+</tr>
+<tr>
+<td>
+i386-pc-freebsd2.2.6
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+NONE
 </td>
 </tr>
 <tr>
