Notes on glibc testing.

--- a/htdocs/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1-test.html
@@ -12,9 +12,17 @@
        regressions on.
 
   <li> Builds glibc and passes glibc testsuite on major supported platforms
-       (to be defined).  We'll be testing a development version of glibc, not
-       any currently released version.  We will place a tag on the glibc
-       sources to provide a common reference point for testing.
+       (x86, alpha, sparc).  Testing on powerpc and m68k would also be
+       appreciated.
+
+       <br>We are testing a development version of glibc, so you must check
+       out a readonly copy of glibc from the cvs repository on egcs.cygnus.com.
+
+       <br>The glibc cvs repository is at egcs.cygnus.com:/cvs/glibc.  It
+       is readable via anonymous cvs in a manner similar to the egcs sources.
+
+       <br>You will want to check out the sources with the tag "glibc-4-egcs-1_1"
+       to ensure that you're checking the right version of glibc.
 
   <li> Linux kernel builds and runs (and 2.1.??? TBD).  Platforms will be
        x86, alpha.  Sparc & PowerPC kernel tests would also be greatly
@@ -37,7 +45,7 @@
 </ul>
 
 <hr>
-<i>Last modified on August 14, 1998.</i>
+<i>Last modified on August 19, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
