Note about 2.0.xx kernels .

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -379,6 +379,11 @@ for the "g++", "c++" and "g77" compiler drivers.
 
 <hr>
 <h2> <a name="linuxkernel">Problems building Linux kernels</a></h2>
+<p> If you have tried to build a 2.0.xx kernel for Intel machines with
+egcs, then you are on your own.  The 2.0.xx kernels are to be built only
+with gcc-2.7.2.  They use certain asm constructs which are incorrect, but
+(by accident) happen to work with gcc-2.7.2.
+
 <p>If you installed a recent binutils/gas snapshot on your Linux system,
 you may not be able to build the kernel because objdump does not understand
 the "-k" switch.  The solution for this problem is to remove /usr/bin/encaps.
@@ -694,7 +699,7 @@ service.boulder.ibm.com (PTF U455193 for APAR IX75823)
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
-<p><i>Last modified:  August 12, 1998</i>
+<p><i>Last modified:  August 18, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
