Remove eb130.C and eb133.C regressions.  They were fixed by relatively recent g++ front end fixes.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -159,7 +159,7 @@ Kate Hedstrom
 Kate Hedstrom
 </td>
 <td>
-eb130.C eb133.C
+NONE
 </td>
 </tr>
 <tr>
@@ -261,8 +261,7 @@ Robert Lipe
 Robert Lipe
 </td>
 <td>
-eb130.C
-eb133.C
+NONE
 </td>
 </tr>
 <tr>
