Add load hoisting/store sinking to news.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,6 +40,11 @@ href="egcs-1.0.3.html"> egcs-1.0.3</a> is the current release.
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>August 19, 1998</b></dt>
+<dd>
+  <a href="hoist.html"> <b>Mark Mitchell donates load hoisting and store
+  sinking support</b></a>.
+</dd>
 <dt><b>July 15, 1998</b></dt>
 <dd>The first snapshot of the rewritten <tt>libstdc++</tt> is available.
 You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
