--- a/htdocs/hoist.html
+++ b/htdocs/hoist.html
@@ -49,8 +49,10 @@ With the optimization, the code generated for the loop becomes:
 </pre>
 Note that in the second case the loads and stores occur outside the
 loop.  In this particular case, we can expect the loop to run about
-33% faster, since there are 4 instructions instead of 6, modulo
-pipelining constraints.
+33% faster, since there are 4 instructions instead of 6.  (Of course,
+the vagaries of today's deeply pipelined architectures can play havoc
+with some estimates, so instruction count is only a rough guess at
+execution time.)
 
 <p>Another example, of interest to the Fortran community, is code like:
 <pre>
@@ -67,7 +69,9 @@ pipelining constraints.
    end
 </pre>
 Here, the code generated for the inner loop will not load or store
-<code>c(j,i)</code> since that value is constant throughout the loop.
+<code>c(j,i)</code> inside the loop.  Instead, the initial value will
+be loaded into a register, and the sum will be accumulated there.
+After the loop is complete, the value will be stored back to memory.
 
 <hr>
 <i>Last modified on August 19, 1998.</i>
