Update entry for --tool_opts to fix formatting

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -704,14 +704,14 @@ service.boulder.ibm.com (PTF U455193 for APAR IX75823)
 <code>-fnew-abi</code> to the testsuite?</a></h2>
 <p>If you invoke <code>runtest</code> directly, you can use the
 <code>--tool_opts</code> option, e.g:
-<pre>
-  runtest --tool_opts "-fnew-abi -fno-honor-std" <other options>
-</pre>
+<code><pre>
+  runtest --tool_opts "-fnew-abi -fno-honor-std" &lt;other options&gt;
+</pre></code>
 Or, if you use <code>make check</code> you can use the
 <code>make</code> variable <code>RUNTESTFLAGS</code>, e.g:
-<pre>
+<code><pre>
   make RUNTESTFLAGS='--tool_opts "-fnew-abi -fno-honor-std"' check-g++
-</pre>
+</pre><code>
 
 <hr>
 <p><a href="index.html">Return to the egcs home page</a>
