Links to SGI's freeware site

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -50,6 +50,7 @@
   <li><a href="#testoptions">How do I pass flags like
          <code>-fnew-abi</code> to the testsuite?</a>
   <li><a href="#o32abi">Does egcs support the O32 ABI on Irix?</a>
+  <li><a href="#irixlinks">Links to other FAQs for GCC on Irix platforms?</a>
 </ol>
 
 <hr>
@@ -733,6 +734,11 @@ seeing two of them: inet_dtoa, and semctl.
 
 <p>A possible workaround: if you have a program that calls inet_dtoa or semctl,
 you may compile it with gcc -mabi=64 
+
+<hr>
+<h2><a name="irixlinks">Links to other FAQs for GCC on Irix platforms </a></h2>
+<p><a href=http://reality.sgi.com/ariel/freeware/> 
+http://reality.sgi.com/ariel/freeware </a>
 
 <p><a href="index.html">Return to the egcs home page</a>
 <p><i>Last modified:  August 22, 1998</i>
