--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -95,6 +95,9 @@ egcs-1.1
 <th>
 regressions
 </th>
+<th>
+libg++ tests
+</th>
 </tr>
 <tr>
 <td>
@@ -145,6 +148,9 @@ Jeff Law
 </td>
 <td>
 NONE
+</td>
+<td>
+OK
 </td>
 </tr>
 <tr>
@@ -197,6 +203,9 @@ Manfred Hollstein
 <td>
 NONE
 </td>
+<td>
+OK
+</td>
 </tr>
 <tr>
 <td>
@@ -213,6 +222,9 @@ Alexandre Oliva
 </td>
 <td>
 NONE
+</td>
+<td>
+OK
 </td>
 </tr>
 <tr>
@@ -231,6 +243,9 @@ Jeff Law
 <td>
 NONE
 </td>
+<td>
+OK
+</td>
 </tr>
 <tr>
 <td>
@@ -247,6 +262,9 @@ Jeff Law
 </td>
 <td>
 NONE
+</td>
+<td>
+OK
 </td>
 </tr>
 <tr>
@@ -347,7 +365,8 @@ Rodney Brown
 </td>
 <td>
 g++.jason/thunk2.C
-g++.mike/{eh30.C,p4750.C}
+g++.mike/eh30.C
+g++.mike/,p4750.C
 g++.other/partspec1.C
 g++.robertl/eb106.C
 </td>
