Add irix5.3 results.  Update irix5.2 results.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -314,7 +314,26 @@ Alexandre Oliva
 Alexandre Oliva
 </td>
 <td>
-spec1.C cvt7.C eh42.C p786.C alpha2.f
+combine-hang.c
+bt.c, 980601-1.c
+Might be hardware problem
+</td>
+</tr>
+<tr>
+<td>
+mips-sgi-irix5.3
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+Jeff Law
+</td>
+<td>
+NONE
 </td>
 </tr>
 <tr>
