Update with current status.

--- a/htdocs/egcs-1.1-test.html
+++ b/htdocs/egcs-1.1-test.html
@@ -15,21 +15,44 @@
        (x86, alpha, sparc).  Testing on powerpc and m68k would also be
        appreciated.
 
-       <br>We are testing a development version of glibc, so you must check
-       out a readonly copy of glibc from the cvs repository on egcs.cygnus.com.
+       <br>We are testing a development version of glibc.  The sources for
+       testing can be found on the 
+       <a href="ftp://egcs.cygnus.com/pub/egcs/infrastructure/egcs-glibc-test.tar.gz"> egcs ftp server</a>
 
-       <br>The glibc cvs repository is at egcs.cygnus.com:/cvs/glibc.  It
-       is readable via anonymous cvs in a manner similar to the egcs sources.
+       <br>x86 has successfully passed the glibc test.
 
-       <br>You will want to check out the sources with the tag "glibc-4-egcs-1_1"
-       to ensure that you're checking the right version of glibc.
+       <br>ppc has passed using different versions of the glibc sources
 
-  <li> Linux kernel builds and runs (and 2.1.??? TBD).  Platforms will be
+       <br>sparc and alpha are untested.
+
+
+  <li> Linux kernel builds and runs (and 2.1.115).  Platforms will be
        x86, alpha.  Sparc & PowerPC kernel tests would also be greatly
        appreciated.
 
-  <li> Red Hat 5.1 builds without errors on x86, Alpha.  Again, Sparc and
-       PowerPC tests would be greatly appreciated.
+       <br>x86 has passed the kernel test (2.1.115)
+
+       <br>ppc has passed using different versions of the kernel
+
+       <br>alpha has had problems with 2.1.115, 2.1.116.  Some success with
+       2.1.117, but it still locks up.  Could be a kernel problem.
+
+       <br>sparc is untested
+       
+
+  <li> Red Hat 5.1 builds without errors on x86, Alpha.  
+       <ul>
+	<li> x86 failures
+	  <ul>
+	    <li> There are minor C++ violations in guavac, sgml-tools and
+		 linuxconf.  These are not egcs failures.
+	    <li> We've built all the appropriate SRPMS and installed the
+		 resulting binaries, then rebuilt the SRPMS again.
+	  </ul>
+	<li> Alpha failures
+	<li> Sparc failures
+	<li> PowerPC failures
+       </ul>
 
   <li> RTEMS builds on the following RTEMS targets:
        <ul>
@@ -45,7 +68,7 @@
 </ul>
 
 <hr>
-<i>Last modified on August 19, 1998.</i>
+<i>Last modified on August 26, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
