Sparc rewrite in the news.

--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -8,6 +8,10 @@
 <h2>NEWS</h2>
 
 <dl>
+<dt><b>August 25, 1998</b></dt>
+<dd>
+  <a href="sparc.html"> <b>David Miller donates rewritten sparc backend</b></a>.
+</dd>
 <dt><b>August 19, 1998</b></dt>
 <dd>
   <a href="hoist.html"> <b>Mark Mitchell donates load hoisting and store
