Update missing regression test platforms (gcc-2.8.1 for osf4).  Add libg++ results for solaris2.5.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -22,8 +22,7 @@ to targets not on the official regression test list.
 
 <p>At this time we have gcc-2.8.1 and egcs-1.0.3a test results for most of
 the platforms on the official test matrix as well as for a few other platforms.
-We are missing alpha-dec-osf4 using gcc-2.8.1 (Kaveh Ghazi), sparc-linux (David
-Miller) from the official matrix.  Hopefully we will have those results soon.
+We are only missing alpha-dec-osf4 using gcc-2.8.1 from the official matrix.
 
 <p>We would like to have tests for ppc-linux and x86-solaris
 as additional tests, but they are not on the official test matrix.
@@ -422,6 +421,7 @@ NONE
 </td>
 </tr>
 <tr>
+OK
 <td>
 sparc-sun-solaris2.6
 </td>
