Add gcc-2.8 tests for alpha-osf.

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -20,13 +20,6 @@ to egcs-1.0.3a or gcc-2.8.1.
 list.  However, the "no regressions" policy does not necessarily apply
 to targets not on the official regression test list.
 
-<p>At this time we have gcc-2.8.1 and egcs-1.0.3a test results for most of
-the platforms on the official test matrix as well as for a few other platforms.
-We are only missing alpha-dec-osf4 using gcc-2.8.1 from the official matrix.
-
-<p>We would like to have tests for ppc-linux and x86-solaris
-as additional tests, but they are not on the official test matrix.
-
 <p>Contact <a href="mailto:law@cygnus.com">law@cygnus.com</a> directly if you
 want to help with the regression testing phase of the egcs-1.1 release cycle.
 
@@ -102,7 +95,7 @@ libg++ tests
 alpha-dec-osf4
 </td>
 <td>
-*Kaveh Ghazi*
+Jeff Law
 </td>
 <td>
 Kaveh Ghazi
@@ -111,7 +104,7 @@ Kaveh Ghazi
 Kaveh Ghazi
 </td>
 <td>
-*NONE*
+NONE
 </td>
 <td>
 OK
@@ -505,7 +498,7 @@ NONE
 test, so I don't consider it critical, but I have asked for a volunteer
 to look into the problem.
 
-<p><i>Last modified on August 14, 1998.</i>
+<p><i>Last modified on August 28, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
