With the usual curses.h problems irix6.2 and irix6.3 pass libg++ make check

--- a/htdocs/regress.html
+++ b/htdocs/regress.html
@@ -360,6 +360,10 @@ David Billinghurst
 <td>
 NONE
 </td>
+<td>
+curses.h botch
+Otherwise OK
+</td>
 </tr>
 <tr>
 <td>
@@ -367,16 +371,22 @@ mips-sgi-irix6.{3,4}
 </td>
 <td>
 Dave Love
+irix6.4
 </td>
 <td>
 Dave Love
+irix6.4
 </td>
 <td>
 Alexandre Oliva
+irix6.3
 </td>
 <td>
 NONE
-(irix6.3)
+</td>
+<td>
+curses.h botch
+Otherwise OK
 </td>
 </tr>
 <tr>
