Push egcs-1.0.x pages down into their own subdir.

--- a/htdocs/egcs-1.0/c++features.html
+++ b/htdocs/egcs-1.0/c++features.html
@@ -198,7 +198,7 @@
   the exception handling work.
 </pre>
 
-<p><a href="">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the egcs home page</a>
 <p><i>Last modified:  November 23, 1997</i>
 
 </body>
