--- a/htdocs/egcs-1.0/features-2.8.html
+++ b/htdocs/egcs-1.0/features-2.8.html
@@ -221,7 +221,7 @@ New feature for Solaris systems:
 
 </pre>
 
-<p><a href="">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the egcs home page</a>
 <p><i>Last modified:  December 8, 1997</i>
 
 </body>
