--- a/htdocs/news.html
+++ b/htdocs/news.html
@@ -42,11 +42,11 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 </dd>
 <dt><b>May 15, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0.3.html"> <b>egcs-1.0.3 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.3.html"> <b>egcs-1.0.3 released!</b></a>.
 </dd>
 <dt><b>March 18, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0.2.html"> <b>egcs-1.0.2 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.2.html"> <b>egcs-1.0.2 released!</b></a>.
 </dd>
 <dt><b>February 26, 1998</b></dt>
 <dd>
@@ -68,11 +68,11 @@ You can read some more <a href="libstdc++-v3.html">here</a>.</dd>
 </dd>
 <dt><b>January 6, 1998</b></dt>
 <dd>
-  <a href="egcs-1.0.1.html"> <b>egcs-1.0.1 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.1.html"> <b>egcs-1.0.1 released!</b></a>.
 </dd>
 <dt><b>December 3, 1997</b></dt>
 <dd>
-  <a href="egcs-1.0.html"> <b>egcs-1.0 released!</b></a>.
+  <a href="egcs-1.0/egcs-1.0.html"> <b>egcs-1.0 released!</b></a>.
 </dd>
 <dt><b>August 15, 1997</b></dt>
 <dd>
