--- a/htdocs/egcs-1.0/caveats.html
+++ b/htdocs/egcs-1.0/caveats.html
@@ -23,7 +23,7 @@
 
   <li> Some versions of the Linux kernel have bugs which prevent them
   from being compiled or from running when compiled by egcs.  See
-  <a href="faq.html/#linuxkernel"> the FAQ </a> for additional information.
+  <a href="../faq.html/#linuxkernel"> the FAQ </a> for additional information.
 
   <li> In general, egcs is more rigorous about rejecting invalid C++ code
   or deprecated C++ constructs than g++-2.7.  As a result it may be necessary
@@ -37,7 +37,7 @@
   and later releases should work with Red Hat Linux 5.0.
 </ul>
 
-<p><a href="">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the egcs home page</a>
 <p><i>Last modified:  August 27, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
