--- a/htdocs/egcs-1.0/egcs-1.0.html
+++ b/htdocs/egcs-1.0/egcs-1.0.html
@@ -40,7 +40,7 @@ list of new features.
 <p>The egcs-1.0 release includes installation instructions in both HTML
 and plaintext forms (see the INSTALL directory in the toplevel directory
 of the egcs-1.0 distribution).  However, we also keep the most up to date
-<a href="install/index.html"> installation instructions </a>
+<a href="../install/index.html"> installation instructions </a>
 and <a href="buildstat.html"> build/test status </a> on our web page.  We
 will update those pages as new information becomes available.
 
@@ -67,7 +67,7 @@ from cambridge.cygnus.com (USA Massachusetts)</a>
 
 
 <p>The egcs-1.0 release should be available on most mirror sites by now.<br>
-<a href="index.html#mirrors"> Goto mirror list to find a closer site</a>
+<a href="../index.html#mirrors"> Goto mirror list to find a closer site</a>
 
 <p>We'd like to thank the numerous people that have contributed new
 features, test results, bugfixes, etc.  Unfortunately, they're far
