--- a/htdocs/egcs-1.0/features.html
+++ b/htdocs/egcs-1.0/features.html
@@ -42,7 +42,7 @@
   <li>Plus the usual assortment of bugfixes and improvements.
 </ul>
 
-<p><a href="">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the egcs home page</a>
 <p><i>Last modified:  December 8, 1997</i>
 
 <!--#include virtual="/glimpsebox.html"-->
