Push egcs-1.1 specifc stuff down into its own subdir too.

--- a/htdocs/egcs-1.1/egcs-1.1-branch.html
+++ b/htdocs/egcs-1.1/egcs-1.1-branch.html
@@ -38,7 +38,7 @@ responses to such patches may be delayed.
 
 
 <hr>
-<p><a href="index.html">Return to the egcs home page</a>
+<p><a href="../index.html">Return to the egcs home page</a>
 <p><i>Last modified:  July 14, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
